build: atualiza script para iniciar a aplicação

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "start": "npm run build && node ./build/index.js",
-    "db:reset": "npx -y tsc && npx sequelize-cli db:drop && npx sequelize-cli db:create"
+    "db:reset": "npx -y tsc && npx sequelize-cli db:drop && npx sequelize-cli db:create",
+    "db:migrate": "npx sequelize db:migrate",
+    "start": "npm run build && node ./build/index.js && npm run db:migrate && npm run db:reset"
   },
   "keywords": [],
   "author": "",
