--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     build: ./frontend
     ports:
       - 3000:3000
-    platform: linux/x86_64
     working_dir: /app-frontend
     depends_on:
       backend:
@@ -15,11 +14,13 @@ services:
       retries: 5
   backend:
     container_name: app_backend
-    build: ./
+    build: ./backend
     ports:
       - 3001:3001
-    platform: linux/x86_64
     working_dir: /app-backend
+    command: npm run start
+    volumes: 
+      - ./backend/src:/app-backend/src
     depends_on:
       db:
         condition: service_healthy
@@ -33,8 +34,6 @@ services:
       test: ["CMD", "lsof", "-t", "-i:3001"]
       timeout: 10s
       retries: 5
-    volumes:
-      - ./:/app-backend
   db:
     image: mysql:8.0.21
     container_name: db
@@ -45,7 +44,7 @@ services:
       - MYSQL_ROOT_PASSWORD=123456
     restart: 'always'
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 10s
       retries: 5
     cap_add:
