--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "puppeteer": "13.2.0",
     "uuid": "8.3.2"
   }
