--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node ./build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register ./src/tests/integration/*$NAME*.test.ts -t 10000 --exit",
+    "test:coverage": "nyc npm run test",
     "build": "npx tsc",
     "db:reset": "npx -y tsc && npx sequelize-cli db:drop && npx sequelize-cli db:create",
     "db:migrate": "npx sequelize db:migrate"
@@ -21,16 +22,26 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "nyc": "^15.1.0",
     "sequelize": "^6.25.3",
+    "ts-node": "10.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.12",
+    "@types/mocha": "^10.0.0",
+    "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "^8.26.0",
+    "mocha": "^10.1.0",
     "mysql2": "^2.3.3",
-    "sequelize-cli": "^6.5.1"
+    "sequelize-cli": "^6.5.1",
+    "sinon": "^14.0.1"
   }
 }
