--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": "./src",                                  
     "outDir": "./build",
     "esModuleInterop": true,                             
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
   "exclude": ["./build"]
 }
